# TARS-Server

./: .env.example  .env.sample  .gitignore  Dockerfile  Dockerfile.development  README.md  dev.Dockerfile  docker-compose.yml  download.py  main.py  poetry.toml  pyproject.toml  requirements.txt  server.py  stream.py  utils.py
.github/: release.yml
.github/workflows/: build.yml  front-build-test.yml  front-lint.yml  publish-docker-image.yml  release.yml
backend/: pyproject.toml
backend/src/: discord.py  log.py  main.py  parallel.py  server.py  stream.py  twitcasting_api.py  twitcasting_stream.py  usecases.py  utils.py
backend/src/tasks/: comments.py  notification.py  scheduler.py  video.py
frontend/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  eslint.config.cjs  eslint.config.js  index.html  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/pages/: index.tsx
frontend/src/: App.tsx
frontend/src/components/: ProfileCard.tsx  RecordCard.tsx
src/: database.py  download.py  main.py  metadata.py  parallel.py  server.py  stream.py  twitcasting.py  utils.py
src/templates/: 404.html  index.html
src/templates/_next/static/7Nyny62HiwmGByC_fenv3/: _buildManifest.js
src/templates/_next/static/7aH88REHz37pQt8QIfFnw/: _buildManifest.js
src/templates/_next/static/91Ke2ofx97RnlO0sBWTn_/: _buildManifest.js
src/templates/_next/static/CkAarFXg231W4Bw05OvmT/: _buildManifest.js
src/templates/_next/static/N7x1WfqBlH13FckuXZX8v/: _buildManifest.js
(+17 files in other folders)
