[tool.poetry]
name = "tars-server"
version = "2.0.0"
description = "Twitcasting Autonomous Recording System"
authors = ["clustlight <git@clustlight.net>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.128.4"
python-dotenv = "^1.2.1"
requests = "^2.32.5"
websockets = "^12.0"
sqlalchemy = "^2.0.46"
uvicorn = "^0.40.0"
jinja2 = "^3.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
